--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -1,6 +1,6 @@
 EXTRA_DIST = LKB sample_analyzer simple_examples README
 INCLUDES = -I$(top_srcdir)/src/include -I$(top_srcdir)/libcfg+
-bin_PROGRAMS = analyzer analyzer_server_npipe analyzer_server_socket analyzer_client_npipe analyzer_client_socket
+bin_PROGRAMS = analyzer analyzer_server_npipe analyzer_server_socket analyzer_client_npipe analyzer_client_socket analyzernou analyzernou_server
 
 if BOOST_MT
   MT="-mt"
@@ -11,11 +11,20 @@ if BOOST_GCC
 endif
 
 
-analyzer_SOURCES = sample_analyzer/analyzer.cc sample_analyzer/config.h
+analyzer_SOURCES = sample_analyzer/analyzer.cc sample_analyzer/analyzer_common.cc sample_analyzer/config.h sample_analyzer/analyzer_common.h
 analyzer_server_npipe_SOURCES = sample_analyzer/analyzer_server_npipe.cc sample_analyzer/config.h
 analyzer_client_npipe_SOURCES = sample_analyzer/analyzer_client_npipe.cc
 
-analyzer_server_socket_SOURCES = sample_analyzer/analyzer_server_socket.cc sample_analyzer/config.h  sample_analyzer/socket.h
+
+analyzernou_SOURCES = sample_analyzer/analyzer_nou.cc sample_analyzer/config.h 
+analyzernou_server_SOURCES = sample_analyzer/analyzer_nou.cc sample_analyzer/config.h sample_analyzer/socket.h
+analyzernou_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre -ldb_cxx -lboost_filesystem$(MT)
+analyzernou_LDFLAGS = -L$(top_srcdir)/src/libmorfo -L$(top_srcdir)/libcfg+
+analyzernou_server_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre -ldb_cxx -lboost_filesystem$(MT)
+analyzernou_server_LDFLAGS = -L$(top_srcdir)/src/libmorfo -L$(top_srcdir)/libcfg+
+analyzernou_server_CPPFLAGS = -DSERVER
+
+analyzer_server_socket_SOURCES = sample_analyzer/analyzer_server_socket.cc sample_analyzer/analyzer_common.cc sample_analyzer/config.h sample_analyzer/analyzer_common.h sample_analyzer/socket.h
 analyzer_client_socket_SOURCES = sample_analyzer/analyzer_client_socket.cc sample_analyzer/socket.h
 
 analyzer_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre -ldb_cxx -lboost_filesystem$(MT)
