--- a/APIs/perl/Makefile
+++ b/APIs/perl/Makefile
@@ -4,7 +4,7 @@ LIBSDIR = /usr/local/
 PERLDIR = /usr/lib/perl/5.10.0
 
 libmorfo_perl.so: libmorfo_wrap.cxx
-	g++ -shared -o libmorfo_perl.so libmorfo_wrap.cxx -lmorfo -ldb_cxx -lpcre -lfries -lomlet -I $(FREELINGDIR)/include -L $(FREELINGDIR)/lib  -I $(LIBSDIR)/include -L $(LIBSDIR)/lib -I $(PERLDIR)/CORE -fPIC
+	g++ -shared -o libmorfo_perl.so libmorfo_wrap.cxx -lmorfo -ldb_cxx -lpcre -lfries -lomlet -lboost_filesystem-mt -I $(FREELINGDIR)/include -L $(FREELINGDIR)/lib  -I $(LIBSDIR)/include -L $(LIBSDIR)/lib -I $(PERLDIR)/CORE -fPIC
 
 libmorfo_wrap.cxx: libmorfo_perl.i
 	swig -perl5 -c++ -o libmorfo_wrap.cxx libmorfo_perl.i
