git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@479 9b274142-39a2-40f6-a478-1b104364ee40

--- a/data/config/ca.cfg
+++ b/data/config/ca.cfg
@@ -84,7 +84,7 @@ CorrectorFile=$FREELINGSHARE/ca/corrector/corrector.dat
 NEClassification=no
 NECFilePrefix=$FREELINGSHARE/ca/nec/nec
 
-## Sense annotation options (none,all,mfs)
+## Sense annotation options (none,all,mfs,ukb)
 SenseAnnotation=none
 SenseFile=$FREELINGSHARE/ca/senses16.db
 DuplicateAnalysis=false
