--- a/data/config/en.cfg
+++ b/data/config/en.cfg
@@ -84,7 +84,7 @@ CorrectorFile=$FREELINGSHARE/en/corrector/corrector.dat
 NEClassification=no
 NECFilePrefix=$FREELINGSHARE/en/nec/nec
 
-## Sense annotation options (none,all,mfs)
+## Sense annotation options (none,all,mfs,ukb)
 SenseAnnotation=none
 SenseFile=$FREELINGSHARE/en/senses16.db
 DuplicateAnalysis=false
