--- a/src/main/LKB/LKB.cfg
+++ b/src/main/LKB/LKB.cfg
@@ -44,6 +44,7 @@ TraceModule=0x0000
 ## Valid input/output formats are: plain, token, splitted, morfo, tagged, parsed
 InputFormat=plain
 OutputFormat=morfo
+#OutputFormat=tagged
 
 # consider each newline as a sentence end
 AlwaysFlush=no
@@ -96,16 +97,14 @@ TaggerRelaxFile=$FREELINGSHARE/es/constr_gram.dat
 TaggerRelaxMaxIter=500
 TaggerRelaxScaleFactor=670.0
 TaggerRelaxEpsilon=0.001
-TaggerRetokenize=yes
-TaggerForceSelect=retok
+TaggerRetokenize=no
+TaggerForceSelect=none
 
 #### Parser options
 GrammarFile=$FREELINGSHARE/es/grammar-dep.dat
 
 #### Dependence Parser options
-DepParser=txala
 DepTxalaFile=$FREELINGSHARE/es/dep/dependences.dat
-DepMaltFile=$FREELINGSHARE/es/malt/malt.dat
 
 #### Coreference Solver options
 CoreferenceResolution=no
