--- a/src/main/LKB/LKB.cfg
+++ b/src/main/LKB/LKB.cfg
@@ -43,8 +43,8 @@ TraceModule=0x0000
 ## as the responsability of calling only the required modules.
 ## Valid input/output formats are: plain, token, splitted, morfo, tagged, parsed
 InputFormat=plain
-OutputFormat=morfo
-#OutputFormat=tagged
+#OutputFormat=morfo
+OutputFormat=tagged
 
 # consider each newline as a sentence end
 AlwaysFlush=no
