--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -11,13 +11,17 @@ if BOOST_GCC
  MT="-gcc-mt"
 endif
 
+if USE_LIBDB
+ LIBDB= -ldb_cxx
+endif
 
 analyzer_SOURCES = sample_analyzer/analyzer.cc sample_analyzer/config.h
-analyzer_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre -ldb_cxx -lboost_filesystem$(MT)
+
+analyzer_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre $(LIBDB) -lboost_filesystem$(MT)
 analyzer_LDFLAGS = -L$(top_srcdir)/src/libmorfo -L$(top_srcdir)/libcfg+
 
 analyzer_server_SOURCES = sample_analyzer/analyzer.cc sample_analyzer/config.h sample_analyzer/socket.h
-analyzer_server_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre -ldb_cxx -lboost_filesystem$(MT)
+analyzer_server_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre $(LIBDB) -lboost_filesystem$(MT)
 analyzer_server_LDFLAGS = -L$(top_srcdir)/src/libmorfo -L$(top_srcdir)/libcfg+
 analyzer_server_CPPFLAGS = -DSERVER
 
