git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@504 9b274142-39a2-40f6-a478-1b104364ee40

--- a/src/main/LKB/LKB.cfg
+++ b/src/main/LKB/LKB.cfg
@@ -70,7 +70,7 @@ LocutionsFile=$FREELINGSHARE/es/locucions.dat
 QuantitiesFile=$FREELINGSHARE/es/quantities.dat
 AffixFile=$FREELINGSHARE/es/afixos.dat
 ProbabilityFile=$FREELINGSHARE/es/probabilitats.dat
-DictionaryFile=$FREELINGSHARE/es/maco.db
+DictionaryFile=$FREELINGSHARE/es/dicc.src
 PunctuationFile=$FREELINGSHARE/common/punct.dat
 ProbabilityThreshold=0.001
 #NER options
@@ -87,7 +87,7 @@ NECFilePrefix=$FREELINGSHARE/es/nec/nec
 
 ## Sense annotation options (none,all,mfs)
 SenseAnnotation=none
-SenseFile=$FREELINGSHARE/es/senses16.db
+SenseFile=$FREELINGSHARE/es/senses16.src
 DuplicateAnalysis=false
 
 #### Tagger options
