--- a/data/config/ca.cfg
+++ b/data/config/ca.cfg
@@ -86,10 +86,11 @@ NECFilePrefix=$FREELINGSHARE/ca/nec/nec
 
 ## Sense annotation options (none,all,mfs,ukb)
 SenseAnnotation=none
-SenseFile=$FREELINGSHARE/ca/senses16.db
+SenseFile=$FREELINGSHARE/ca/senses30.db
 DuplicateAnalysis=false
-UKBRelations=$FREELINGSHARE/common/wn16-ukb.bin
-UKBDictionary=$FREELINGSHARE/ca/senses16.ukb
+#UKBRelations=$FREELINGSHARE/common/wn30-ukb.bin
+UKBRelations=$FREELINGSHARE/common/xwn30-ukb.bin
+UKBDictionary=$FREELINGSHARE/es/senses30.ukb
 UKBEpsilon=0.03
 UKBMaxIter=10
 
