Compile Cerego version of analyzer.

--- a/src/main/Makefile.am
+++ b/src/main/Makefile.am
@@ -1,7 +1,7 @@
 EXTRA_DIST = LKB sample_analyzer simple_examples README
 INCLUDES = -I$(top_srcdir)/src/include -I$(top_srcdir)/libcfg+
 
-bin_PROGRAMS = analyzer analyzer_server analyzer_client
+bin_PROGRAMS = analyzer analyzer_server analyzer_client analyzer_cereling
 
 if BOOST_MT
   MT="-mt"
@@ -16,7 +16,6 @@ if USE_LIBDB
 endif
 
 analyzer_SOURCES = sample_analyzer/analyzer.cc sample_analyzer/config.h
-
 analyzer_LDADD = -lmorfo -lfries -lomlet -lcfg+ -lpcre $(LIBDB) -lboost_filesystem$(MT)
 analyzer_LDFLAGS = -L$(top_srcdir)/src/libmorfo -L$(top_srcdir)/libcfg+
 
@@ -27,9 +26,14 @@ analyzer_server_CPPFLAGS = -DSERVER
 
 analyzer_client_SOURCES = sample_analyzer/analyzer_client.cc sample_analyzer/socket.h
 
+analyzer_cereling_SOURCES = $(analyzer_SOURCES)
+analyzer_cereling_LDADD = $(analyzer_LDADD)
+analyzer_cereling_LDFLAGS = $(analyzer_LDFLAGS)
+analyzer_cereling_CPPFLAGS = -DCERELING
+
 install-exec-hook:
-	cp sample_analyzer/analyze sample_analyzer/initialize $(bindir)
-	chmod +x $(bindir)/analyze
+	cp sample_analyzer/analyze sample_analyzer/analyze_cereling sample_analyzer/initialize $(bindir)
+	chmod +x $(bindir)/analyze $(bindir)/analyze_cereling
 
 uninstall-hook:
-	@rm -rf $(bindir)/analyze $(bindir)/initialize
+	@rm -rf $(bindir)/analyze $(bindir)/analyze_cereling $(bindir)/initialize
